--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.9.3",
+    "@now/node": "^1.4.1",
     "jss": "^10.0.4",
     "next": "^9.2.2",
     "prop-types": "^15.7.2",
