--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "mj-portfolio",
   "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "type-check": "tsc",
+    "publish": "now"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Michael Jennings",
+  "license": "MIT",
   "dependencies": {
+    "isomorphic-unfetch": "3.0.0",
     "@material-ui/core": "^4.9.3",
-    "@now/node": "^1.4.1",
     "jss": "^10.0.4",
     "next": "^9.2.2",
     "prop-types": "^15.7.2",
@@ -21,5 +21,11 @@
     "react-dom": "^16.12.0",
     "react-jss": "^10.0.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/node": "^13.7.4",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "@now/node": "^1.4.1",
+    "typescript": "^3.8.2"
+  }
 }
